@@ -1,3 +1,8 @@
+2004-01-25 17:59 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormInternalViewEditor.m: Change to remove dependency on internals
+	of NSWindow: GSWindowView, in particular.
+	
 2004-01-20 08:53 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormViewWithContentViewEditor.m: Backing out previous change.
